<resources>
  <string name="app_name">EHG App</string>
  <string name="selectlanguage_title">Select Language</string>
  <string name="forgotpassword_resetpassword">Reset Password </string>
  <string name="reservation_upcomingtab">Upcoming</string>
  <string name="reservation_pasttab">Past</string>
  <string name="all_signin">SIGN-IN</string>
  <string name="splash_signin">Sign-in</string>
  <string name="all_forgotpassword">Forgot Password </string>
  <string name="all_signin_to_tap">Sign-In to the app with your</string>
  <string name="all_u_by_emaar"><b>U By Emaar</b></string>
  <string name="signupfragment_sign_up_and_create">Sign-Up &amp; Create </string>
  <string name="signupfragment_what_is_u_by_emaar"><u>What is U By Emaar?</u></string>
  <string name="all_account">account.</string>
  <string name="signupfragment_signup">SIGN-UP</string>
  <string name="all_continue_as_guest">Continue as a Guest </string>
  <string name="all_mobilenumber">Mobile Number</string>
  <string name="all_password">Password</string>
  <string name="all_invalidemail">Invalid email address</string>
  <string name="all_invalidmobile">Invalid mobile number</string>
  <string name="all_invalidpassword">Invalid password</string>
  <string name="all_passwordlength">Password length must be at least 8 characters.</string>
  <string name="all_passwordsuggestion">Password must contain at least one capital letter, number and symbol</string>
  <string name="all_incorrectpassword">Incorrect password</string>
  <string name="all_fieldrequired">This field is required</string>
  <string name="all_expirydatevalidationerror">Invalid expiry date</string>
  <string name="all_erroremailormobile">Please enter registered mobile number or email</string>
  <string name="all_spacesnotallowed">Space not allowed</string>
  <string name="signup_termsandcondition">By tapping on Sign-up you agree to our\nTerms and Conditions</string>
  <string name="all_email">Email Address</string>
  <string name="all_or">OR</string>
  <string name="forgotpassword_instruction">Give us your mobile number or email address\nand we\'ll send you password reset instructions</string>
  <string name="offersfragment_offers">Offers</string>
  <string name="homefragment_home">Home</string>
  <string name="settings_title">Settings</string>
  <string name="all_please_check_network_settings">Please check your network settings.</string>
  <string name="all_loading">Loading please wait...</string>
  <string name="share">Share</string>
  <string name="twitter">Twitter</string>
  <string name="instagram">Instagram</string>
  <string name="facebook">Facebook</string>
  <string name="dialog_ok">Ok</string>
  <string name="dialog_cancel">Cancel</string>
  <string name="map_title">Map</string>
  <string name="dialog_errortitle">Error</string>
  <string name="dialog_alerttitle">Alert</string>
  <string name="all_confirmtitle">Confirm</string>
  <string name="setting_signoutmessage">Are you sure you want to sign out?</string>
  <string name="all_yes">Yes</string>
  <string name="all_no">No</string>
  <string name="all_apierrormessage">Our system encountered a problem. Please try again later!</string>
  <string name="all_permissionalert">User must allow these permissions to access all functions in app.</string>
  <string name="all_firstname">First Name</string>
  <string name="all_lastname">Last Name</string>
  <string name="email">email</string>
  <string name="homefragment_guestname_title">Hello Mr John Doe,</string>
  <string name="homefragment_guest_information">You have an upcoming reservation at Address Downtown from 14th to 17th September ,2018</string>
  <string name="homefragment_roomcontrol">ROOM CONTROLS</string>
  <string name="item_home_fetauretext">HOTELS AND RESORTS</string>
  <string name="item_home_showall">Show all</string>
  <string name="item_home_horizonalitem">ADDRESS HOTELS RESORT</string>
  <string name="headersearchlayout_textviewhint"><![CDATA[Search for Hotels, Restaurant & More....]]></string>
  <string name="splash_bottom_label_description">Booking a hotel can be overwhelming but it\'s\n easy with Emaar Hospitality App\'s seamless\nbooking feature.</string>
  <string name="splash_book_hotel_title">Book a Hotel</string>
  <string name="setting_preferences">PREFERENCES</string>
  <string name="settings_support">SUPPORT</string>
  <string name="settings_privacy_policy">PRIVACY POLICY</string>
  <string name="settings_termsandconditions">TERMS AND CONDITIONS</string>
  <string name="settings_language">LANGUAGE</string>
  <string name="settings_sign_in_sign_up">SIGN-IN/SIGN-UP</string>
  <string name="settings_signuot">SIGN-OUT</string>
  <string name="home_title">Home</string>
  <string name="book_title">Book</string>
  <string name="reservations_title">Reservations</string>
  <string name="offers_title">Offers</string>
  <string name="u_by_emaar_title">U By Emaar</string>
  <string name="settingpreferences_notifications">Notifications</string>
  <string name="progress_pleasewait">Please Wait</string>
  <string name="ubyemaar_username">Mr.John Doe</string>
  <string name="ubyemaar_blacktext">Black</string>
  <string name="ubyemaar_membershiplable">Membership</string>
  <string name="ubyemaar_totalupoints">6027</string>
  <string name="ubyemaar_totalupointslabel">Total Upoints</string>
  <string name="ubyemaar_availabletoredeemlabel">Available to\nRedeem</string>
  <string name="ubyemaar_amountlabel">270</string>
  <string name="ubyemaar_profilelabels">PROFILE</string>
  <string name="ubyemaar_upointlabel">UPOINT ACTIVITY</string>
  <string name="ubyemaar_aedcurrency">AED</string>
  <string name="ubyemaar_preferenceslabel">PREFERENCES</string>
  <string name="ubyemaar_benefitslabel">BENEFITS</string>
  <string name="upoint_title">Last 5 Transactions</string>
  <string name="upointsactivity_descriptiondatelabel">Description/Date</string>
  <string name="upointsactivity_upointslabel">Upoints</string>
  <string name="upointactivity_valuelabel">Value</string>
  <string name="upointactivuty_title">Upoint Activity</string>
  <string name="bookingsummary_clientname">Dear Mr John Doe,</string>
  <string name="bookingsummery_reservationtitle">Your Room Reservation :</string>
  <string name="bookingsummary_bookingconfirmation">Booking Confirmation :</string>
  <string name="bookingsummary_hotellabel">Hotel :</string>
  <string name="all_sort">Sort</string>
  <string name="all_filter">Filter</string>
  <string name="offers_latest">Latest</string>
  <string name="offers_foryou">For you</string>
  <string name="sortoffersdialog_alphabetical_atoz">Alphabetical A-Z</string>
  <string name="sortoffersdialog_alphabetical_ztoa">Alphabetical Z-A</string>
  <string name="sortoffersdialog_apply">Apply</string>
  <string name="sortoffersdialog_pleasechooseoneoption">Please choose one option.</string>
  <string name="bookingsummary_telephonelabel">Telephone :</string>
  <string name="bookingsummary_emaillabel">Email :</string>
  <string name="bookingsummary_guestroomtypelabel">Room Type :</string>
  <string name="bookingsummary_guestcheckinlabel">Checkin :</string>
  <string name="bookingsummary_guestcheckoutlabel">Check out :</string>
  <string name="bookingsummary_pricelabel">Price</string>
  <string name="bookingsummary_guestcount">No of People</string>
  <string name="bookingsummary_abouthotal">Learn More About the Hotel</string>
  <string name="bookingsummary_disclaimer">Disclaimer</string>
  <string name="bookingsummary_disclamer">The sample documents below are provided for general information purposes only. Your use of any of these sample documents is at your own risk, and you should not use any of these sample documents without first seeking legal and other professional advice. The provision of these sample documents (and the documents themselves) do not constitute legal advice or opinions of any kind, or any advertising or solicitation. No lawyer-client, advisory, fiduciary or other relationship is created between Moneris Solutions Corporation (Moneris) and any person accessing or otherwise using any of the sample documents. Moneris and its affiliates (and any of their respective directors, officers, agents, contractors, interns, suppliers and employees) will not be liable for any damages, losses or causes of action of any nature arising from any use of any of the sample documents or the provision of these sample documents.</string>
  <string name="bookingsummary_modifybooking">Modify Booking</string>
  <string name="bookingsummary_cancelbooking">Cancel Booking</string>
  <string name="userpreferences_preferences">Preferences</string>
  <string name="userpreferences_experiencesyoulike">Experiences you like</string>
  <string name="splash_next">Next</string>
  <string name="hoteldetail_hoteldirection"><u>Get Direction</u></string>
  <string name="hoteldetail_abouthotel">With aspirations that soar even higher than its marvelously elegant form, the award-winning Address Downtown is an iconic flagship hotel that presents an altogether new and visionary view of the future of luxury hospitality. It is only fitting that one of the world’s foremost references for premium luxury is also effortlessly accessible. On the 15-minute limousine ride from Dubai International Airport, the traditional beauty of old Dubai blends into the fantastic futurism of new Dubai, a prelude to the sublime refinement of Address Downtown. Qualifying it as iconic in every sense is a triad of locational advantages: Poised directly before the magnificent Burj Khalifa, adjacent to The Dubai Mall, and taking pride of place at the centre of Downtown Dubai. Whether inside or around this monumental icon, you will find that there is, quite simply, no other place like it anywhere in the world.</string>
  <string name="hoteldetail_readmore">Read More</string>
  <string name="hoteldetail_amenitieslabel">Amenities</string>
  <string name="hoteldetai_gallerylabel">Gallery</string>
  <string name="hoteldetail_callus">Call us</string>
  <string name="hoteldetail_booknow">Book Now</string>
  <string name="search_searchhint">Search for Hotels, Restaurants &amp; More</string>
  <string name="benefits_yourtierbenefits">Your Tier Benefits</string>
  <string name="dummy_description">Address Hotels + Resorts is the first brand launched by  Emaar Hospitality Group. The premium luxury hotel group has positioned itself as choice perfect for business, leisure and group travellers.</string>
  <string name="offersdetail_bookbetweenlabel">Book Between</string>
  <string name="offersdetail_staybetweenlabel">Stay Between</string>
  <string name="offersdetail_pricelabel">Price</string>
  <string name="offersdetail_complimentrylabel">Complimentry</string>
  <string name="offersdetail_joinherelabel">Join here.</string>
  <string name="offersdetail_termsandconditions">Terms and Conditions</string>
  <string name="restaurentbookingslot_dateselection">Select the Date</string>
  <string name="restaurentbookingslot_textviewlabel">people</string>
  <string name="restaurentbookingslot_selecttimelabel">Select Time</string>
  <string name="restaurentbookingslot_numberofpeople">Select Number of People</string>
  <string name="restaurantdetail_address">Address dubai Mall, Sheikh Mohammed Bin Rashed Bulevard - Dubai</string>
  <string name="hotelfilter_brand">Brand</string>
  <string name="hotelfilter_property">Property</string>
  <string name="hotelfilter_classification">Classification</string>
  <string name="hotelfilter_facilities">Facilities</string>
  <string name="roompayment_summarypayment"><![CDATA[Summary & Payment]]></string>
  <string name="all_name">Name:</string>
  <string name="all_address">Address</string>
  <string name="all_checkin">Checkin</string>
  <string name="all_checkout">Check out</string>
  <string name="all_numberofpeople">Number of People</string>
  <string name="all_roomtype">Room Type</string>
  <string name="all_addons">Add-ons</string>
</resources>