<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Emaar Hospitality Group on 21/9/18 11:54 AM
  ~  Copyright (C) 2018  All rights reserved.
  ~  Last modified 21/9/18 11:54 AM
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include
    android:id="@+id/header_upointactivity"
    layout="@layout/layout_header_with_navigation"/>

  <LinearLayout
    android:id="@+id/linearlayout_upointactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/header_upointactivity"
    android:padding="@dimen/textsize_all_guestdetail"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/imagesize_all_locationimage"
      android:text="@string/upoint_title"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/textsize_medium"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/imagesize_all_locationimage"
      android:orientation="horizontal"
      android:weightSum="3">

      <TextView
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/upointsactivity_descriptiondatelabel"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center|end"
        android:text="@string/upointsactivity_upointslabel"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"/>

      <TextView
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.08"
        android:gravity="end"
        android:text="@string/upointactivity_valuelabel"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/imagesize_all_locationimage"
      android:background="@color/colorGray"/>

    <android.support.v7.widget.RecyclerView
      android:id="@+id/recyclerview_upointactivity"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />
  </LinearLayout>
</RelativeLayout>