<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Emaar Hospitality Group on 16/8/18 1:15 PM
  ~  Copyright (C) 2018  All rights reserved.
  ~  Last modified 16/8/18 1:15 PM
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".socialmedia.SocialMediaActivity">

  <include
    android:id="@+id/header_settings"
    layout="@layout/layout_header_with_navigation"/>

  <LinearLayout
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".socialmedia.SocialMediaActivity">

    <ImageView
      android:id="@+id/imageview_social_media_facebook"
      android:layout_width="@dimen/dimension_social_media_share_icon"
      android:layout_height="@dimen/dimension_social_media_share_icon"
      android:layout_margin="@dimen/dimension_header_margin_left"
      android:background="@drawable/ic_facebook"
      android:text="@string/facebook"/>

    <ImageView
      android:id="@+id/imageview_social_media_twitter"
      android:layout_width="@dimen/dimension_social_media_share_icon"
      android:layout_margin="@dimen/dimension_header_margin_left"
      android:layout_height="@dimen/dimension_social_media_share_icon"
      android:background="@drawable/ic_twitter"
      android:text="@string/twitter"/>

    <ImageView
      android:id="@+id/imageview_social_media_instagram"
      android:layout_width="@dimen/dimension_social_media_share_icon"
      android:layout_margin="@dimen/dimension_header_margin_left"
      android:layout_height="@dimen/dimension_social_media_share_icon"
      android:background="@drawable/ic_instagram"
      android:text="@string/instagram"/>
  </LinearLayout>
</LinearLayout>