<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Emaar Hospitality Group on 17/10/18 2:53 PM
  ~  Copyright (C) 2018  All rights reserved.
  ~  Last modified 17/10/18 2:53 PM
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".booking.hotel.HotelFilterActivity">

  <include layout="@layout/layout_header_with_navigation"/>

  <View
    android:layout_marginTop="@dimen/margin_all_vertical"
    android:layout_width="match_parent"
    android:background="@color/colorGray"
    android:layout_height="@dimen/height_all_viewline"/>

  <LinearLayout
    android:layout_margin="@dimen/margin_all_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:textStyle="bold"
      style="@style/AppLabelsTextAppearance"
      android:id="@+id/textview_hotelfilter_brand"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hotelfilter_brand"/>

    <android.support.design.chip.ChipGroup
      android:id="@+id/chipgroup_hotelfilter_brand"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      app:chipSpacingHorizontal="@dimen/margin_all_horizontal"
      app:singleLine="false"/>

    <TextView
      android:layout_marginTop="@dimen/margin_all_vertical"
      android:textStyle="bold"
      style="@style/AppLabelsTextAppearance"
      android:id="@+id/textview_hotelfilter_property"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hotelfilter_property"/>

    <android.support.design.chip.ChipGroup
      android:id="@+id/chipgroup_hotelfilter_property"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      app:chipSpacingHorizontal="@dimen/margin_all_horizontal"
      app:singleLine="false"/>

    <TextView
      android:layout_marginTop="@dimen/margin_all_vertical"
      android:textStyle="bold"
      style="@style/AppLabelsTextAppearance"
      android:id="@+id/textview_hotelfilter_classification"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hotelfilter_classification"/>

    <android.support.design.chip.ChipGroup
      android:id="@+id/chipgroup_hotelfilter_classification"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      app:chipSpacingHorizontal="@dimen/margin_all_horizontal"
      app:singleLine="false"/>

    <TextView
      android:layout_marginTop="@dimen/margin_all_vertical"
      android:textStyle="bold"
      style="@style/AppLabelsTextAppearance"
      android:id="@+id/textview_hotelfilter_facilities"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/hotelfilter_facilities"/>

    <android.support.design.chip.ChipGroup
      android:id="@+id/chipgroup_hotelfilter_facilities"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      app:chipSpacingHorizontal="@dimen/margin_all_horizontal"
      app:singleLine="false"/>

  </LinearLayout>

</LinearLayout>