<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Emaar Hospitality Group on 24/9/18 12:58 PM
  ~  Copyright (C) 2018  All rights reserved.
  ~  Last modified 24/9/18 12:58 PM
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/linearlayout_sortoffersdialog"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/elevation_all_header"
  android:background="@drawable/alertdialog_rounded_bg"
  android:gravity="top"
  android:orientation="vertical">

  <LinearLayout
    android:id="@+id/liearlayout_sortoffersdialog_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textview_sortoffersdialog_title"
      style="@style/HeaderTextAppearance"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/elevation_all_header"
      android:layout_gravity="start"
      android:text="@string/all_sort"
      android:textColor="@color/colorGray"/>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.1dp"
      android:layout_margin="@dimen/elevation_all_header"
      android:background="@color/colorGray"/>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_all_vertical"
    android:layout_marginStart="@dimen/elevation_all_header"
    android:layout_marginEnd="@dimen/elevation_all_header"
    android:layout_centerInParent="true"
    android:layout_gravity="top"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
      android:id="@+id/relativelayout_sortoffersdialog_sortatoz"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        style="@style/AppLabelsTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/sortoffersdialog_alphabetical_atoz"/>

      <RadioButton
        android:id="@+id/radiobutton_sortoffersdialog_atoz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/relativelayout_sortoffersdialog_sortztoa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/elevation_all_header">

      <TextView
        style="@style/AppLabelsTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/sortoffersdialog_alphabetical_ztoa"/>

      <RadioButton
        android:id="@+id/radiobutton_sortoffersdialog_ztoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
    </RelativeLayout>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginTop="@dimen/margin_all_vertical"
      android:background="@color/colorGray"
      android:elevation="@dimen/margin_all_vertical"/>

    <Button
      android:id="@+id/button_sortoffersdialog_apply"
      style="@style/HeaderTextAppearance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_all_vertical"
      android:layout_marginStart="@dimen/margin_all_horizontal"
      android:layout_marginEnd="@dimen/margin_all_horizontal"
      android:layout_gravity="center"
      android:background="@drawable/all_rounded_button"
      android:gravity="center"
      android:text="@string/sortoffersdialog_apply"/>
  </LinearLayout>


</LinearLayout>
